<resources>
    <string-array name="share_receipt_list">
        <item>Mail</item>
        <item>Sms</item>
    </string-array>
    <string name="account_type">com.overflow.cash</string>
    <string name="accounts_payable">Account Payable</string>
    <string name="accounts_receiveable">Account Receiveable</string>
    <string name="action_settings">Settings</string>
    <string name="add_category">Add Category</string>
    <string name="add_customer">Add Customer</string>
    <string name="add_outlet">Add New Outlet</string>
    <string name="add_price">Add Price</string>
    <string name="add_product">Add Product</string>
    <string name="add_stock">Add Stock</string>
    <string name="address">Address</string>
    <string name="all_product">All Product</string>
    <string name="app_name">Layani</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="are_you_sure_cash_in">Are you sure to save {0} money into the cash drawer</string>
    <string name="are_you_sure_cash_out">Are you sure you want to take {0} money from the cash drawer?</string>
    <string name="are_you_sure_transaction">Are you sure want to pay this transaction?</string>
    <string name="are_you_sure_topup">Are you sure want buy product {0}</string>

    <string name="are_you_sure_remove">Are you sure want to remove {0}?</string>
    <string name="are_you_sure_refund">Are you sure want to refund this transaction?</string>
    <string name="bill_amount">Bill Amount</string>
    <string name="backspace">⌫</string>
    <string name="buy_now">Buy Now</string>
    <string name="cancel">Cancel</string>
    <string name="cannot_read_barcode">Cannot read barcode</string>
    <string name="card">Card</string>
    <string name="cart">Cart</string>
    <string name="cash">Cash</string>
    <string name="cash_drawer">Cash Drawer</string>
    <string name="cashback">Cashback</string>
    <string name="category">Category</string>
    <string name="content_authority">com.overflow.cash.provider</string>
    <string name="create_store">Create Store</string>
    <string name="create_store_success">Store successfully saved</string>
    <string name="credit_amount">Credit Amount</string>
    <string name="custom">Custom</string>
    <string name="customer">Customer</string>
    <string name="customer_name">Customer Name</string>
    <string name="report_outlet">Report</string>
    <string name="date">Date</string>
    <string name="date_in">Date in</string>
    <string name="clear_transaction">Clear Transaction</string>
    <string name="delete">Remove</string>
    <string name="delete_item">Remove Item</string>
    <string name="description">Description</string>
    <string name="discount">Discount</string>
    <string name="done">Done</string>
    <string name="download">Download</string>
    <string name="due_date">Due date</string>
    <string name="edit_category">Edit Category</string>
    <string name="edit_customer">Edit Customer</string>
    <string name="edit_product">Edit Product</string>
    <string name="empty_data">No Data</string>
    <string name="fixed_price">Fixed Price</string>
    <string name="flash">Flash Light</string>
    <string name="focus">Focus</string>
    <string name="for_trx">for transaction</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hours">Hours</string>
    <string name="in_age">Effective Date</string>
    <string name="income">Income</string>
    <string name="init_price">Base Price</string>
    <string name="least_stock">Least stock</string>
    <string name="login">Sign-In</string>
    <string name="logout">Sign-Out</string>
    <string name="mail">E-Mail</string>
    <string name="manage_stock">Manage Stock</string>
    <string name="manage_product">Manage Product</string>
    <string name="minumum_price">Minimum Price</string>
    <string name="month">Monthly</string>
    <string name="most_stock">Most Stock</string>
    <string name="name">Name</string>
    <string name="nav_customer">Customer</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="new_transaction">New Transaction</string>
    <string name="next_step">Next Step</string>
    <string name="no">No</string>
    <string name="no_account_receiveable_description">No account receiveable</string>
    <string name="no_category_data">No Category Data</string>
    <string name="no_customer_title">Customer Not found</string>
    <string name="no_internet">No Internet Connection</string>
    <string name="no_product_description">Press button + to add product</string>
    <string name="no_product_title">No product data</string>
    <string name="not_enough_stock">Product Not Available</string>
    <string name="num_of_purchase">Purchase Amount</string>
    <string name="ok">OK</string>
    <string name="other">Other</string>
    <string name="out_of_age">Overdue</string>
    <string name="paid">Paid</string>
    <string name="password">Password</string>
    <string name="pay">Pay</string>
    <string name="pay_paid">Paid</string>
    <string name="payer">Debtor</string>
    <string name="pcs">pcs</string>
    <string name="percentage">Percentage</string>
    <string name="phone_number">Phone Number</string>
    <string name="phone_number_gojek">Gojek Phone Number</string>
    <string name="phone_number_grab">Grab Phone Number</string>
    <string name="press_again_to_close">Press again to close app</string>
    <string name="print_receipt">Print Receipt</string>
    <string name="plus">+</string>
    <string name="product_code">Product Code</string>
    <string name="product_detail">Product detail</string>
    <string name="product_name">Product Name</string>
    <string name="profit">Profit</string>
    <string name="purchase">Purchase Order</string>
    <string name="purchase_price">Init Price</string>
    <string name="quantity">Quantity</string>
    <string name="receipt">Receipt</string>
    <string name="refund_paid">Refund</string>
    <string name="register">Register</string>
    <string name="register_store">Register Stock</string>
    <string name="remaining_stock">Remaining Stock</string>
    <string name="sales">Sales</string>
    <string name="sales_amount">Sales Amount</string>
    <string name="save">Save</string>
    <string name="saved_transaction">Saved Transaction</string>
    <string name="scan_barcode">Scan Barcode</string>
    <string name="search">Search..</string>
    <string name="search_order_hint">Search with transaction number</string>
    <string name="sell_price">Sell Price</string>
    <string name="settings">Setting</string>
    <string name="share">Bagikan</string>
    <string name="smart_search">Smart Search</string>
    <string name="sort">Sort</string>
    <string name="stock">Stock</string>
    <string name="stock_in">Stock in</string>
    <string name="stock_out">Stock Out</string>
    <string name="store_name">Store name</string>
    <string name="store_owner_name">Store owner</string>
    <string name="submit">Save</string>
    <string name="subtract">-</string>
    <string name="success">Success</string>
    <string name="system_err">Upps, Something went wrong</string>
    <string name="the_right_money">Right Money</string>
    <string name="today">Today</string>
    <string name="top_up">Top Up &amp; Postpaid</string>
    <string name="total_amount">Total Amount</string>
    <string name="total_payment">Total Payment</string>
    <string name="total_refund">Total Refund</string>

    <string name="transaction_amount">Transaction Amount</string>
    <string name="transaction_detail">Transaction Detail</string>
    <string name="transaction_history">Transaction History</string>
    <string name="transaction_not_found">Transaction Not Found</string>
    <string name="try_again">Try Again</string>
    <string name="unit">Unit</string>
    <string name="use_stock">Use Stock</string>
    <string name="username">Username</string>
    <string name="view_discount">View Discount</string>
    <string name="waiting_for_magic">Currently waiting for magic</string>
    <string name="week">Weekly</string>
    <string name="weight">Weight</string>
    <string name="year">Yearly</string>
    <string name="yes">Yes</string>
    <string name="yesterday">Yesterday</string>

    <string name="void_trx">Void</string>
    <string name="in_progress">In Progress</string>
    <string name="all">All</string>
    <string name="refund_reason">Reasonable Refund</string>
    <string name="manage_cash">Manage Cash</string>
    <string name="no_cashbox_found">No data for cash summary</string>
    <string name="cashier">Cashier</string>
    <string name="amount">Amount</string>
    <string name="cash_in_out">Cash In &amp; Out</string>
    <string name="fill_cash_summary">Fill Cash Summary</string>
    <string name="no_cashbox_history_found">No CashBox History Found</string>
    <string name="cash_in">Cash In</string>
    <string name="cash_out">Cash Out</string>
    <string name="note">Note</string>
    <string name="total">Total</string>
    <string name="total_should_be">Total Should Be</string>
    <string name="transaction">Transaction</string>
    <string name="compare_with_yesterday">Compare With Yesterday</string>
    <string name="sales_other">Other Sales</string>
    <string name="transaction_custom_does_not_have_order_items">Other transaction does\'nt have any item</string>
    <string name="notification_channel">pulsa_channel</string>
    <string name="notification_channel_description">pulsa_channel_description</string>
    <string name="transaction_in_progress">Transaction {0}, in progress.</string>
    <string name="please_choose_product">Please choose product.</string>
    <string name="invalid">tidak valid</string>
    <string name="player_id">Player Id</string>
    <string name="customer_id">Player Id</string>
    <string name="no_meter">Customer Id</string>
    <string name="customer_no">Customer Number</string>
    <string name="check_payment">Cek Payment</string>
    <string name="pay_zero">Pay Rp0</string>
    <string name="invalid_no_meter">Invalid no meter</string>
    <string name="adm_cost">Admin Cost</string>
    <string name="num_of_month">Num Of Month</string>
    <string name="pay_the_payment">Pay</string>
    <string name="payment_in_progress">Payment in progress</string>
</resources>

