<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_dashboard"
            android:icon="@drawable/ic_dashboard"
            android:title="@string/dashboard" />
        <item
            android:id="@+id/nav_product"
            android:icon="@drawable/ic_product"
            android:title="@string/product" />
        <item
            android:id="@+id/nav_sales"
            android:icon="@drawable/ic_sales"
            android:title="@string/sales" />
        <item
            android:id="@+id/nav_purchase"
            android:icon="@drawable/ic_purchase"
            android:title="@string/purchase" />
        <item
            android:id="@+id/nav_accounts_receiveable"
            android:icon="@drawable/ic_money"
            android:title="@string/accounts_receiveable" />
        <item
            android:id="@+id/nav_accounts_payable"
            android:icon="@drawable/ic_money"
            android:title="@string/accounts_payable" />
        <item
            android:id="@+id/nav_customer"
            android:icon="@drawable/ic_customer"
            android:title="@string/nav_customer" />
    </group>

    <item android:title="@string/other">
        <menu>
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_gear"
                android:title="@string/settings" />
            <!--<item-->
                <!--android:productCode="@+productCode/nav_send"-->
                <!--android:icon="@drawable/ic_menu_send"-->
                <!--android:title="Send" />-->
        </menu>
    </item>

</menu>
