<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/action_cart"
        android:title="@string/cart"
        android:icon="@drawable/ic_cart"
        app:actionLayout="@layout/menu_layout_cart"
        app:showAsAction="always"/>

    <item android:id="@+id/action_search"
        android:title="@string/smart_search"
        android:icon="@drawable/ic_search"
        app:showAsAction="always"/>

    <item android:id="@+id/action_saved_transaction"
        android:title="@string/saved_transaction"
        app:showAsAction="never"/>

    <item android:id="@+id/action_delete_transaction"
        android:title="@string/clear_transaction"
        app:showAsAction="never"/>

</menu>