<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".AddPriceActivity">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/totalAmountWrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/edTotalAmount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/total_payment"
            android:inputType="number"
            android:maxLines="1" />
    </android.support.design.widget.TextInputLayout>

    <EditText
        android:id="@+id/edCustomer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:focusableInTouchMode="false"
        android:background="@drawable/bg_edit_text"
        android:drawableLeft="@drawable/ic_customer"
        android:drawableTint="@color/colorAccent"
        android:hint="@string/customer_name"
        android:maxLines="1"
        android:padding="5dp" />

    <EditText
        android:id="@+id/edDueDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/bg_edit_text"
        android:drawableLeft="@drawable/ic_calendar"
        android:drawableTint="@color/colorAccent"
        android:focusableInTouchMode="false"
        android:hint="@string/due_date"
        android:visibility="gone"
        android:maxLines="1"
        android:padding="5dp" />

    <Spinner
        android:id="@+id/sp_cashbox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginTop="20dp"
        android:hint="@string/init_price"
        android:maxLines="1" />

    <RadioGroup
        android:id="@+id/rgCashType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/rdCash"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".5"
            android:checked="true"
            android:text="@string/cash" />

        <RadioButton
            android:id="@+id/rdPaid"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".5"
            android:text="@string/paid" />
    </RadioGroup>

    <Button
        android:id="@+id/btnPay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/btn_default"
        android:text="@string/pay"
        android:textColor="@android:color/white"
        android:textSize="16sp" />

    <ProgressBar
        android:id="@+id/payProgressBar"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:visibility="gone" />
</LinearLayout>