<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="20dp">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="1.8">

        <Button
            android:id="@+id/btn_add_qty"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_weight=".4"
            android:background="@drawable/bg_btn_qty"
            android:text="@string/plus"
            android:textSize="28sp" />


            <EditText
                android:id="@+id/ed_qty"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:hint="@string/quantity"
                android:inputType="number"
                android:background="@drawable/bg_edit_text_no_radius"
                android:maxLines="1"
                android:textAlignment="center" />

        <Button
            android:id="@+id/btn_sub_qty"
            android:layout_width="0dp"
            android:layout_weight=".4"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:background="@drawable/bg_btn_qty"
            android:text="@string/subtract"
            android:textSize="28sp" />
    </LinearLayout>

    <Button
        android:layout_marginTop="@dimen/default_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_accent"
        android:textColor="@drawable/btn_accent_text"
        android:text="@string/delete"/>

</LinearLayout>