<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="20dp">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.design.widget.TextInputLayout
            android:id="@+id/stockInWrapper"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content">

            <EditText
                android:enabled="false"
                android:id="@+id/edDateStockIn"
                android:textColor="@color/colorAccent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/date_in"
                android:maxLines="1" />
        </android.support.design.widget.TextInputLayout>

        <ImageView
            android:id="@+id/btnDate"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_gravity="bottom"
            android:layout_marginBottom="8dp"
            android:contentDescription="@null"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_calendar"
            android:tint="@color/colorAccent" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/qty_price_layout"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.design.widget.TextInputLayout
            android:id="@+id/quantity_wrapper"
            android:layout_weight=".5"
            android:layout_width="0dp"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/ed_quantity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/quantity"
                android:inputType="number"
                android:maxLines="1" />
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:id="@+id/purchase_price_wrapper"
            android:layout_width="0dp"
            android:layout_weight=".5"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/ed_purchase_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/init_price"
                android:inputType="number"
                android:maxLines="1" />
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_marginTop="20dp"
        android:id="@+id/descriptionWrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/edDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/description"
            android:inputType="text"
            android:maxLines="2" />
    </android.support.design.widget.TextInputLayout>
    <RadioGroup
        android:id="@+id/rgStock"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RadioButton
            android:checked="true"
            android:id="@+id/stockIn"
            android:text="@string/stock_in"
            android:layout_width="0dp"
            android:layout_weight=".5"
            android:layout_height="wrap_content" />

        <RadioButton
            android:id="@+id/stockOut"
            android:text="@string/stock_out"
            android:layout_width="0dp"
            android:layout_weight=".5"
            android:layout_height="wrap_content" />
    </RadioGroup>
    <Button
        android:id="@+id/btn_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/btn_default"
        android:text="@string/submit"
        android:textColor="@android:color/white"
        android:textSize="16sp" />
    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        android:visibility="gone"/>
</LinearLayout>