<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical"
    tools:context=".activity.CreateStoreActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="20dp"
        >
        <!--<ImageView-->
            <!--android:src="@drawable/logo"-->
            <!--android:layout_marginBottom="20dp"-->
            <!--android:layout_width="200dp"-->
            <!--android:layout_height="90dp"-->
            <!--android:contentDescription="@null"/>-->

        <android.support.design.widget.TextInputLayout
            android:layout_marginTop="20dp"
            android:id="@+id/storeNameWrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/edStoreName"
                android:hint="@string/store_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:inputType="text"
                />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_marginTop="20dp"
            android:id="@+id/phoneWrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/edPhone"
                
                
                android:hint="@string/phone_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:inputType="phone"
                />
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_marginTop="20dp"
            
            android:id="@+id/mailWrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/edMail"
                android:hint="@string/mail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:inputType="textEmailAddress"
                />
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_marginTop="20dp"
            
            android:id="@+id/addressWrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/edAddress"
                
                
                android:hint="@string/address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="10"
                android:minLines="3"
                android:gravity="top|left"
                android:inputType="textMultiLine"

                />
        </android.support.design.widget.TextInputLayout>
        <Button
            android:layout_marginTop="20dp"
            android:id="@+id/btnNext"
            android:enabled="false"
            android:text="@string/next_step"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            android:background="@drawable/btn_default"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>

</LinearLayout>