<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:padding="20dp"
    android:orientation="vertical">

    <ImageView
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:src="@drawable/ic_return"
        android:contentDescription="@null"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:text="@string/total_refund"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/text_size_extra_medium"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_total_refund"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:textSize="@dimen/text_size_large"
            android:textStyle="bold"
            tools:text="Rp. 25000" />
    </LinearLayout>

    <EditText
        android:id="@+id/ed_refund_reason"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/default_margin"
        android:gravity="top|start"
        android:hint="@string/refund_reason"
        android:inputType="textMultiLine"
        android:lines="2" />
    <Button
        android:id="@+id/btn_pay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_margin"
        android:background="@drawable/btn_default"
        android:text="@string/refund_paid"
        android:textColor="@color/textLight" />
</LinearLayout>