<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:padding="20dp"
    android:orientation="vertical">

    <ImageView
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:src="@drawable/cash_dialog" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:text="@string/total_payment"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/text_size_extra_medium"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_total_payment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:textSize="@dimen/text_size_large"
            android:textStyle="bold"
            tools:text="Rp. 25000" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        >

        <TextView
            android:id="@+id/tv_pay_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:text="@string/cashback"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/text_size_extra_medium"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_cashback"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:textSize="@dimen/text_size_large"
            android:textStyle="bold"
            tools:text="Rp. 25000" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_pay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_margin"
        android:background="@drawable/btn_default"
        android:text="@string/pay"
        android:textColor="@color/textLight" />
</LinearLayout>